<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Score Tarot</string>
    <string name="menu_add_partie">Ajouter une partie</string>
    <string name="menu_add_donne">Ajouter une donne</string>
    <string name="menu_tri">Trier le tableau</string>
    <string name="menu_graph">Graphique</string>
    <string name="menu_tableau">Tableau</string>
    <string name="title_activity_new_partie">Nouvelle partie</string>
    <string name="GDH">Description de la partie</string>
    <string name="NBJ">Partie à %s joueurs</string>
    <string name="title_activity_table_donne">Tableau des scores</string>
    <string name="save">Enregister</string>
    <string name="cancel">Annuler</string>
    <string name="delete">Supprimer</string>
    <string name="edit">Modifier</string>
    <string name="open">Ouvrir</string>
    <string name="ok">OK</string>
    <string name="title_activity_new_donne">Nouvelle donne</string>
    <string name="title_activity_edit_donne">Modification donne n°%s</string>

    <string-array name="donne_contrats">
        <item>Passe</item>
        <item>Prise</item>
        <item>Garde</item>
        <item>Garde-Sans</item>
        <item>Garde-Contre</item>
    </string-array>
    <string-array name="donne_petit">
        <item></item>
        <item>Petit pour l\'attaque\n</item>
        <item>Petit pour la défense\n</item>
    </string-array>
    <string-array name="donne_poignee">
        <item></item>
        <item>Simple-poignée\n</item>
        <item>Double-poignée\n</item>
        <item>Triple-poignée\n</item>
    </string-array>
    <string-array name="donne_chelem">
        <item></item>
        <item>Chelem non-annoncé\n</item>
        <item>Chelem annoncé\n</item>
        <item>Chelem non réalisé\n</item>
        <item>Chelem pour la défense\n</item>
    </string-array>
    <string name="donne_preneur">Preneur : %s\n</string>
    <string name="donne_appele">Appelé : %s\n</string>
    <string name="donne_mort">Mort : %s\n</string>
    <string name="donne_passee">Passée de : %d\n</string>
    <string name="donne_chutee">Chutée de : %d\n</string>
    <string name="donne_points">Points marqués : %d\n</string>
    <string name="donne_bouts">Nombre de bouts : %d\n</string>
    <string name="donne_misere">Misère : %s\n</string>

    <string name="contrat">Contrat </string>
    <string name="preneur">Preneur</string>
    <string name="appele">Appelé</string>
    <string name="mort">Mort</string>
    <string name="attaque">Attaque</string>
    <string name="defense">Défense</string>
    <string name="petit">Petit au bout</string>
    <string name="points">Points</string>
    <string name="oudlers">Bouts</string>
    <string name="poignee">Poignée</string>
    <string name="chelem">Chelem</string>
    <string name="misere">Misère (non officiel)</string>

    <string-array name="l_petit">
        <item>Aucun</item>
        <item>Attaque</item>
        <item>Défense</item>
    </string-array>
    <string-array name="l_poignee">
        <item>Aucune</item>
        <item>Simple</item>
        <item>Double</item>
        <item>Triple</item>
    </string-array>
    <string-array name="l_chelem">
        <item>Aucun</item>
        <item>Non-annoncé</item>
        <item>Annoncé</item>
        <item>Non réalisé</item>
        <item>Défense</item>
    </string-array>
    
    <string name="nd_point_attaque">pour l\'attaque </string>
    <string name="nd_point_defense">pour la défense </string>
    <string name="title_activity_graph">Graphique des scores</string>
    <string name="delete_partie">Faut-il supprimer la partie %s ?</string>
    <string name="delete_donne">Faut-il supprimer la donne %s ?</string>
    <string name="num_donne">Donne n°%s</string>
    
    <string name="attention">Attention</string>
    <string name="mort_preneur">En partie à 6 joueurs, le mort ne peut ni prendre, ni être appelé !</string>

    <string name="banner_ad_unit_id">ca-app-pub-9915051541205356/1232658423</string>
    <string name="title_activity_activity_config">Configuration</string>
    <string name="menu_preferences">Préférences</string>
    <string name="preferences_title">Préférences</string>
    <string name="preferences_theme_court">Thème</string>
    <string name="preferences_theme_long">Theme à utiliser</string>
    <string-array name="preference_list_entries">
        <item>Sombre</item>
        <item>Clair</item>
    </string-array>
    <string-array name="preference_list_values">
        <item>Sombre</item>
        <item>Clair</item>
    </string-array>
    <string name="theme_default">Sombre</string>
</resources>