<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600dp"
    android:orientation="vertical"
    tools:context=".NewDonneActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preneur"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_preneur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/preneur" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nd_lappele"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appele"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_appele"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/appele" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nd_lmort"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mort"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_mort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/mort" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               android:layout_weight="1"
                android:text="@string/contrat"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/nd_contrat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
               android:layout_weight="3"
                android:entries="@array/donne_contrats"
                 android:prompt="@string/contrat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nd_attaque_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp" >

            <EditText
                android:id="@+id/nd_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/points"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/nd_bouts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/oudlers"
                android:inputType="numberSigned" />

            <ToggleButton
                android:id="@+id/nd_attaque"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:checked="true"
                android:clickable="true"
                android:textOff="@string/nd_point_defense"
                android:textOn="@string/nd_point_attaque" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/petit"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_petit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/l_petit"
                    android:prompt="@string/petit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/poignee"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_poignee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/l_poignee"
                    android:prompt="@string/poignee" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/chelem"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/nd_chelem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/l_chelem"
                    android:prompt="@string/chelem" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>